# heatmap-api/src/main/resources/api/openapi.yaml
@@ -1007,7 +1007,7 @@ paths:
     get:
       tags: [AdminVenues]
       summary: Get venue moderation queue
-      operationId: getAdminVenues
+      operationId: getVenues
       x-required-roles: [ADMIN]
       security:
         - bearerAuth: []
@@ -1034,7 +1034,7 @@ paths:
     get:
       tags: [AdminVenues]
       summary: Get venue moderation details
-      operationId: getAdminVenueById
+      operationId: getVenueById
       x-required-roles: [ADMIN]
       security:
         - bearerAuth: []
